# django-on-a-log

./: .gitignore  README.md  main.py  pyproject.toml
django_on_a_log/: apps.py
example/: db.sqlite3
example/example/: settings.py  urls.py  views.py
