[project]
name = "django-on-a-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-htmx>=1.27.0",
    "django-q2>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "django-pytest>=0.2.0",
    "playwright>=1.59.0",
    "pytest>=9.0.3",
]
